Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37738

Android: Arabic numerals don't display

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 RC1
    • 5.3.0 Alpha
    • GUI: Text handling
    • None
    • Android
    • 0b87f4f6c912a508f170cd25ff5317bb77665fa9

      As can be seen with the following QML, Arabic numerals don't work properly on Android.

      import QtQuick 2.2
      import QtQuick.Window 2.1
      
      Window {
          visible: true
          width: 360
          height: 360
      
          Text {
              text: qsTr("\u0661")
              anchors.centerIn: parent
          }
      }
      

      This should display the digit ١ but displays nothing. My guess is that this is related to font merging.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes