Android: Fix font merging

Our fallback fonts would contain a minimal list of hardcoded fallback
fonts, which is neither sufficient for displaying all text, nor
portable to different vendors which can supply different font sets.

[ChangeLog][Android] Fixed font merging problem which caused e.g.
missing glyphs for Arabic numerals.

Task-number: QTBUG-37738
Change-Id: Ic971343a1cd5610c79a81f6f6152c637937b5626
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>

cregit: 0b87f4f6c912a508f170cd25ff5317bb77665fa9 https://github.com/qt/qtbase/commit/0b87f4f6c912a508f170cd25ff5317bb77665fa9