src/plugins/platforms/android/qandroidplatformfontdatabase.h
@@ -48,6 +48,18 @@ argument_list|,
 argument|QChar::Script script
 argument_list|)
 specifier|const
+block|;
+name|private
+operator|:
+name|QHash
+operator|<
+name|QChar
+operator|::
+name|Script
+block|,
+name|QStringList
+operator|>
+name|m_fallbacks
 block|; }
 decl_stmt|;
 end_decl_stmt
